# python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  copier.yml  pyproject.toml
project/: .editorconfig  .gitignore  README.md.j2  pyproject.toml.j2  {% if docker_compose %}docker-compose.yml{% endif %}.j2  {% if dockerfile %}Dockerfile{% endif %}.j2  {% if gitlabci %}.gitlab-ci.yml{% endif %}.j2  {% if mkdocs %}mkdocs.yml{% endif %}.j2  {% if precommit %}.pre-commit-config.yaml{% endif %}.j2  {% if taskfile %}Taskfile.yaml{% endif %}.j2
project/{% if mkdocs %}docs{% endif %}/: index.md.j2  modules.md.j2
project/{% if pytest %}tests{% endif %}/: test_foo.py.j2
project/{{project_slug}}/: main.py
