[project]
name = "my-python-project-template"
version = "0.1"
description = "A python copier template for a new python project"
authors = [{ name = "Aleksandr Groshev", email = "haddystuff@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
  "copier>=9.4.1"
]

[dependency-groups]
dev = [
    "pre-commit>=2.20.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 110
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.pylint]
disable = ["missing-module-docstring", "missing-function-docstring", "missing-class-docstring"]
max-line-length = 110
ignore-patterns = ["tests/*"]
output-format = "colorized"
